# gdmap

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac
data/: Makefile  Makefile.am  Makefile.in  gdmap.1  gdmap.desktop  gdmap.desktop.in
debian/: changelog  control  copyright  gdmap.install  gdmap_icon.xpm  menu  rules  watch
debian/patches/: add-filetypes.patch  series
po/: Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  bg.gmo  bg.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  he.gmo  he.po  hr.gmo  hr.po  it.gmo  it.po  nb.po  no.gmo  ru.gmo  ru.po  sv.gmo  sv.po  tr.gmo  tr.po
src/: Makefile  Makefile.am  Makefile.in  about.c  about.h  colors.c  colors.h  gdmap  gui_main.c  gui_main.h  gui_support.c  gui_support.h  l_i18n.h  main.c  preferences.c  preferences.h  tree.c  tree.h  utils.c  utils.h
src/.deps/: gdmap-about.Po  gdmap-colors.Po  gdmap-gui_main.Po  gdmap-gui_support.Po  gdmap-main.Po  gdmap-preferences.Po  gdmap-tree.Po  gdmap-utils.Po
